# diffusion_for_multi_scale_molecular_dynamics

./: .gitignore  README.md  README_mtp.md  pyproject.toml  requirements.txt  setup.py  test_mace_pretrained.py  test_pyg_dlg.py
.github/workflows/: ci.yml
analysis_and_sanity_checks/: README.md
analysis_and_sanity_checks/analyse_FLARE/: flare_descriptors.py  plot_errors_noop_trained_FLARE_on_amorphous_si.py  train_and_validate_FLARE_on_repaint_structures.py
analysis_and_sanity_checks/atom_types_only_experiments/: pseudo_train_diffusion.py
analysis_and_sanity_checks/components_analysis/: plot_diffusion_poster_image.py  plot_q_matrices.py  plot_repulsive_force.py  plot_target_conditional_score_different_sigmas.py  plot_target_conditional_score_kmax_convergence.py  plot_variance_schedule.py  plotting_gaussian_vs_wrapped_gaussian.py
analysis_and_sanity_checks/dataset_analysis/: compute_dataset_covariance.py  plot_energy_consistency_analysis.py  plot_si_phonon_DOS.py
analysis_and_sanity_checks/generators_sanity_check/: sde_generator_sanity_check.py
analysis_and_sanity_checks/toy_problems/: README.md  analyse_experiment.py
configuration_templates/: README.md
configuration_templates/active_learning_config_files/: README_active_learning.md  config.yaml
configuration_templates/diffusion_config_files/: config_diffusion_egnn.yaml  config_diffusion_egnn_2_atoms_in_1D.yaml  config_diffusion_mace.yaml  config_diffusion_mace_orion.yaml  config_diffusion_mlp.yaml  config_diffusion_mlp_orion.yaml  config_mace_equivariant_head.yaml  config_mace_mlp_head.yaml
configuration_templates/mtp/: mtp_to_ovito.sh
configuration_templates/run_scripts/: run_active_learning_benchmark.sh  run_diffusion_narval.sh  run_orion_local.sh
crystal_diffusion/: __init__.py  evaluate.py  main_utils.py  namespace.py  sample_diffusion.py  train.py  train_diffusion.py  train_mtp.py
crystal_diffusion/active_learning_loop/: activelearning_dataclasses.py  benchmark.py  oracle.py  utils.py
crystal_diffusion/analysis/: README_ovito.md  __init__.py  dataset_analysis.py  diffusion_sample_position_analysis.py  exploding_variance_analysis.py  generator_sample_analysis_utils.py  ovito_visualisation.py  perturbation_kernel_analysis.py  positions_to_cif_files.py  target_score_analysis.py  timing_adjacency_matrix_calculations.py
crystal_diffusion/callbacks/: analysis_callbacks.py  callback_loader.py  callbacks.py  loss_monitoring_callback.py  sampling_callback.py  sampling_visualization_callback.py  standard_callbacks.py
crystal_diffusion/data/: data_loader.py  data_preprocess.py  parse_lammps_outputs.py  utils.py
crystal_diffusion/generators/: constrained_langevin_dynamics_generator.py  constrained_langevin_generator.py  instantiate_generator.py  langevin_generator.py  langevin_position_generator.py  load_sampling_parameters.py  ode_position_generator.py  position_generator.py  predictor_corrector_position_generator.py  predictor_corrector_position_sampler.py  sampling.py  sde_position_generator.py
crystal_diffusion/loggers/: logger_loader.py
crystal_diffusion/metrics/: kolmogorov_smirnov_metrics.py  metrics_parameters.py
crystal_diffusion/mlip/: mtp_train.py  mtp_utils.py
crystal_diffusion/models/: analytical_score_network.py  callbacks.py  diffusion_mace.py  egnn.py  egnn_clean.py  egnn_utils.py  faenet.py  faenet_utils.py  graph_utils.py  instantiate_diffusion_model.py  loss.py  mace_utils.py  model_loader.py  mtp.py  my_model.py  normalized_score_fokker_planck_error.py  optimizer.py  position_diffusion_lightning_model.py  scheduler.py  score_fokker_planck_error.py  score_network.py  score_prediction_head.py
crystal_diffusion/oracle/: energies.py  lammps.py
crystal_diffusion/samplers/: exploding_variance.py  noisy_position_sampler.py  noisy_relative_coordinates_sampler.py  predictor_corrector_position_sampler.py  time_sampler.py  variance_sampler.py
data/: crop_lammps_outputs.py  data_generation_functions.sh  extract_2atoms.py  lammps_input_example.lammps  parse_lammps.sh  process_lammps_data.py  run_lammps_example.sh
docs/: conf.py  index.rst
experiment_analysis/: README  __init__.py  analysis_utils.py
experiments/: README  README.md  analysis_utils.py
hooks/: pre-commit  pre-commit_staged
mlip3_missing_files/: CMakeLists.txt  add_missing_files.sh  mlp_commands.cpp  src_CMakeLists.txt  src_mlp_CMakeLists.txt  test_examples_01_CMakeLists.txt  test_examples_04_CMakeLists.txt  test_examples_05_CMakeLists.txt  test_examples_08_CMakeLists.txt
mlip3_missing_files/cmake/: PreventInSourceBuilds.cmake
mlip3_missing_files/cmake/Modules/: FindCBLAS.cmake  FindMKL.cmake  FindOpenBLAS.cmake
resources/: README_mtp.md
sanity_checks/: __init__.py  overfit_fake_data.py  sanity_check_callbacks.py
template_sampling_scripts/: draw_langevin_samples.py  draw_langevin_with_force_samples.py  draw_ode_samples.py
tests/: conftest.py  fake_data_utils.py  test_fake_data_utils.py  test_hp_utils.py  test_sample_diffusion.py  test_train_active_learning.py  test_train_diffusion.py
tutorials/: excise_and_repaint_03.ipynb  repaint_02.ipynb  simple_experiment.ipynb  simple_experiment_01.ipynb  utilities.py
(+787 files in other folders)
